tests/invalid/security/hard_coded_keys.php
<?php

// php-checker-ignore: sanity/undefined_variable,security/hard_coded_credentials,cleanup/unused_variable

// Hard-coded encryption key - should trigger error
$key = "hardcodedkey123456789012345";
